--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,10 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "allowUmdGlobalAccess": false
+    "module": "CommonJS",
+    "checkJs": false,
+    "allowUmdGlobalAccess": true,
+    "forceConsistentCasingInFileNames": true
   },
   "include": ["script/**/*.js"],
   "files": ["node_modules/@akashic/akashic-engine/index.runtime.d.ts"]
