chore(deps): update modules

--- a/package.json
+++ b/package.json
@@ -8,15 +8,17 @@
     "start": "akashic-cli-sandbox .",
     "lint": "eslint . --fix",
     "format": "prettier . --write",
-    "test": "npm run lint"
+    "test": "npm run lint && prettier . --check"
   },
   "keywords": [],
   "author": "",
   "license": "",
   "devDependencies": {
-    "@akashic/akashic-cli-sandbox": "^1.1.12",
-    "@akashic/akashic-engine": "^3.20.1",
-    "eslint": "^9.20.1",
-    "prettier": "^3.5.1"
+    "@akashic/akashic-cli-commons": "^1.0.0",
+    "@akashic/akashic-cli-sandbox": "^2.0.1",
+    "@akashic/akashic-engine": "^3.20.3",
+    "@akashic/sandbox-configuration": "^2.3.0",
+    "eslint": "^9.27.0",
+    "prettier": "^3.5.3"
   }
 }
